# NTONIX

./: .gitignore  .last-branch  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  Dockerfile.build  PRD.md  README.md  docker-compose.test.yml  docker-compose.yml  progress.txt  project_overview.txt  pytest.ini  ralph.sh  vcpkg.json
.claude/: settings.local.json
config/: docker-ntonix.json  ntonix.json
docs/adr/: 001-boost-asio.md  002-swrr-load-balancing.md  003-lru-cache-design.md  004-zero-copy-streaming.md  005-configuration-hierarchy.md
mock/: Dockerfile  llm_backend.py  requirements.txt  simple_backend.py
src/: main.cpp
src/balancer/: health_checker.cpp  health_checker.hpp  load_balancer.cpp  load_balancer.hpp
src/cache/: cache_key.cpp  cache_key.hpp  lru_cache.cpp  lru_cache.hpp
src/config/: config.cpp  config.hpp
src/proxy/: connection_pool.cpp  connection_pool.hpp  forwarder.cpp  forwarder.hpp  stream_pipe.cpp  stream_pipe.hpp
src/server/: connection.cpp  connection.hpp  server.cpp  server.hpp  ssl_connection.cpp  ssl_connection.hpp  ssl_context.cpp  ssl_context.hpp  ssl_server.cpp  ssl_server.hpp
src/util/: logger.cpp  logger.hpp  metrics.cpp  metrics.hpp
tests/integration/: conftest.py  requirements.txt  test_caching.py  test_health_monitoring.py  test_load_balancing.py  test_request_forwarding.py  test_ssl_termination.py  test_streaming.py
